@@ -1,10 +1,11 @@
 package com.traveler.board.service;
 
 
+import com.traveler.board.dto.BoardDocumentDto;
 import com.traveler.board.dto.BoardDto;
 import com.traveler.board.dto.BoardListDto;
+import com.traveler.board.dto.SearchResultDto;
 import com.traveler.board.entity.Board;
-import com.traveler.board.entity.BoardDocument;
 import com.traveler.board.entity.Image;
 import com.traveler.board.repository.BoardRepository;
 import com.traveler.board.repository.ImageRepository;
@@ -30,17 +31,22 @@ public class BoardService {
     private final SearchService searchService;
     private final KafkaProducerService kafkaProducerService;
 
-    public List<BoardListDto> listArticlesBySearch(String keyword, String category, String region, String sort, String direction, int page) throws DataAccessException{
-        List<BoardDocument> result = searchService.search(keyword, category, region, sort, direction, page);
-        return result.stream().map(board -> BoardListDto.builder()
+    public SearchResultDto listArticlesBySearch(String keyword, String category, String region, String sort, String direction, int page) throws DataAccessException{
+        BoardDocumentDto searchResult = searchService.search(keyword, category, region, sort, direction, page);
+
+        List<BoardListDto> result = searchResult.getResult().stream().map(board -> BoardListDto.builder()
                 .id(board.getId())
                 .title(board.getTitle())
                 .memberId(board.getMemberId())
                 .modifiedDate(board.getModifiedDate())
                 .category(board.getCategory())
                 .region(board.getRegion())
+                .viewCount(board.getViewCount())
+                .ratingAvg(board.getRatingAvg())
                 .build()
-        ).collect(Collectors.toList());
+        ).toList();
+        Long totalHits = searchResult.getTotalHits();
+        return new SearchResultDto(result, totalHits);
     }
 
 
@@ -54,6 +60,8 @@ public class BoardService {
                 .modifiedDate(board.getModifiedDate())
                 .category(board.getTravelPlace().getCategory().getName())
                 .region(board.getTravelPlace().getRegion().getName())
+                .viewCount(board.getViewCount())
+                .ratingAvg(board.getRatingAvg())
                 .build()
         ).collect(Collectors.toList());
     }
@@ -95,30 +103,29 @@ public class BoardService {
     }
 
     @Transactional
-    public void editArticle(BoardDto data, List<MultipartFile> images){
+    public void editArticle(BoardDto data, List<MultipartFile> images, List<String> existingImages){
         Board board = boardRepository.findById(Long.parseLong(data.getNo())).orElseThrow(RuntimeException::new);
-        board.setId(Long.parseLong(data.getNo()));
         board.setTitle(data.getTitle());
         board.setContent(data.getContent());
         board.setMemberId(data.getMemberId());
         board.setTravelPlace(travelPlaceService.editAndGetTravelPlace(board.getTravelPlace().getId(), data.getCategory(), data.getRegion(), data.getTravelPlace(), data.getAddress()));
 
-        List<Image> existingImages = imageRepository.findByBoard(board);
-        for (Image img : existingImages) {
-            imageRepository.delete(img);
-            try {
-                imageStorageService.delete(img.getPath());
-            } catch (IOException e) {
-                throw new RuntimeException(e);
+        List<Image> dbImages = imageRepository.findByBoard(board);
+        for (Image img : dbImages) {
+            if (existingImages == null || !existingImages.contains(img.getPath())) {
+                imageRepository.delete(img);
+                try {
+                    imageStorageService.delete(img.getPath());
+                } catch (IOException e) {
+                    System.err.println("이미지 삭제 실패: " + img.getPath());
+                }
             }
         }
         // 2. 새 이미지 저장
         if (images != null && !images.isEmpty()) {
             uploadImages(images, board);
         }
-        searchService.saveToES(board);
-//        Board savedBoard = boardRepository.save(board);
-//        searchService.saveToES(savedBoard);
+        searchService.updateES(board);
     }
     public void removeArticle(Long no){
         Board board = boardRepository.findById(no).orElseThrow(() -> new CustomBoardException("존재하지 않는 게시글입니다."));
@@ -169,6 +176,8 @@ public class BoardService {
                         .memberId(board.getMemberId())
                         .category(board.getTravelPlace().getCategory().getName())
                         .region(board.getTravelPlace().getRegion().getName())
+                        .viewCount(board.getViewCount())
+                        .ratingAvg(board.getRatingAvg())
                         .build())
                 .collect(Collectors.toList());
 
@@ -182,6 +191,8 @@ public class BoardService {
                         .memberId(board.getMemberId())
                         .category(board.getTravelPlace().getCategory().getName())
                         .region(board.getTravelPlace().getRegion().getName())
+                        .viewCount(board.getViewCount())
+                        .ratingAvg(board.getRatingAvg())
                         .build())
                 .collect(Collectors.toList());
 
@@ -192,9 +203,9 @@ public class BoardService {
     }
 
     @Transactional
-    public void updateRatingAvg(Long boardId, Integer rating, boolean isAdd) {
+    public Board updateRatingAvg(Long boardId, Integer rating, boolean isAdd) {
         Board board = boardRepository.findById(boardId).orElse(null);
-        if (board == null) return;
+        if (board == null) return null;
 
         long commentCount = board.getCommentCount() == null ? 0L : board.getCommentCount();
         double ratingAvg = board.getRatingAvg() == null ? 0.0 : board.getRatingAvg();
@@ -212,20 +223,23 @@ public class BoardService {
             board.setCommentCount(newCommentCount);
             board.setRatingAvg(newRatingAvg);
         }
+        return boardRepository.save(board);
     }
 
     @Transactional
-    public void updateFavoriteCount(Long boardId, boolean isAdd) {
+    public Board updateFavoriteCount(Long boardId, boolean isAdd) {
         Board board = boardRepository.findById(boardId).orElse(null);
-        if (board == null) return;
+        if (board == null) return null;
 
         long favoriteCount = board.getFavoriteCount() == null ? 0L : board.getFavoriteCount();
         board.setFavoriteCount(isAdd ? favoriteCount + 1 : favoriteCount - 1);
+        return boardRepository.save(board);
     }
 
     @Transactional
-    public void updateViewCount(Long boardId){
+    public Board updateViewCount(Long boardId){
         boardRepository.increaseViewCount(boardId);
+        return boardRepository.findById(boardId).orElse(null);
     }
 
 }
